--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@thewhodidthis/trending",
+  "name": "@thewhodidthis/bipolar",
   "version": "0.0.0",
   "description": "Numerometer",
   "keywords": [
@@ -8,13 +8,13 @@
     "trending"
   ],
   "main": "index.js",
-  "homepage": "https://github.com/thewhodidthis/trending#readme",
+  "homepage": "https://github.com/thewhodidthis/bipolar#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thewhodidthis/trending.git"
+    "url": "git+https://github.com/thewhodidthis/bipolar.git"
   },
   "bugs": {
-    "url": "https://github.com/thewhodidthis/trending/issues"
+    "url": "https://github.com/thewhodidthis/bipolar/issues"
   },
   "config": {
     "jscsrc": ".jscsrc"
