--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jscsrc": ".jscsrc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test",
     "cleanup": "rm -f *.log",
     "lint": "(jshint index.js & jscs index.js --reporter=inlinesingle) 2>&1 | tee lint-js.log",
     "postlint": "find lint-js.log -size 0 -print0 | xargs -0 rm",
@@ -36,7 +36,8 @@
   "dependencies": {},
   "devDependencies": {
     "jscs": "latest",
-    "jshint": "latest"
+    "jshint": "latest",
+    "tape": "latest"
   },
   "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
   "license": "Unlicense"
