--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "percent",
     "trending"
   ],
+  "jsnext:main": "index.es",
   "main": "index.js",
   "homepage": "https://github.com/thewhodidthis/bipolar#readme",
   "repository": {
@@ -21,7 +22,13 @@
   },
   "scripts": {
     "test": "node test",
-    "lint": "eslint index.js; exit 0"
+    "cleanup": "rm -f *.log",
+    "lint": "eslint index.es; exit 0",
+    "start": "npm run cleanup && npm run build",
+    "preexample": "npm start",
+    "example": "node example",
+    "build": "rollup -c",
+    "preversion": "npm start"
   },
   "engines": {
     "node": ">=4.2.4",
@@ -30,6 +37,9 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-config-airbnb-base": "latest",
+    "rollup": "latest",
     "tape": "latest"
   },
   "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
