--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "percent",
     "trending"
   ],
-  "jsnext:main": "index.es",
   "main": "index.js",
+  "module": "index.es",
   "homepage": "https://github.com/thewhodidthis/bipolar#readme",
   "repository": {
     "type": "git",
