--- a/package.json
+++ b/package.json
@@ -19,14 +19,8 @@
   },
   "scripts": {
     "test": "node test",
-    "clear": "npm run clear:dist && npm run clear:logs",
-    "clear:dist": "rm -rf dist/",
-    "clear:logs": "rm -f *.log",
-    "lint": "eslint index.es; exit 0",
-    "start": "npm run build && npm run build:min",
-    "build": "rollup -c",
-    "build:min": "uglifyjs dist/bipolar.js -cm > dist/bipolar.min.js",
-    "preversion": "npm start"
+    "lint": "eslint index.es",
+    "start": "rollup -c && uglifyjs dist/bipolar.js -cm > dist/bipolar.min.js"
   },
   "engines": {
     "node": ">=4.2.4",
@@ -37,7 +31,7 @@
     "babel-eslint": "latest",
     "babel-plugin-external-helpers": "latest",
     "babel-preset-es2015": "latest",
-    "eslint": "latest",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "latest",
     "eslint-plugin-import": "latest",
     "rollup": "latest",
