--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "node test",
-    "lint": "eslint index.es",
+    "lint": "eslint index.es test/*.js",
     "start": "rollup -c && uglifyjs dist/bipolar.js -cmo dist/bipolar.min.js"
   },
   "engines": {
