package: cleanup npm scripts, deps, meta, use buble

--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "bipolar",
   "version": "0.0.2",
   "description": "Helps detect change",
-  "keywords": [
-    "delta",
-    "percent",
-    "trending"
-  ],
   "main": "index.js",
   "module": "index.es",
   "homepage": "https://github.com/thewhodidthis/bipolar#readme",
@@ -18,9 +13,13 @@
     "url": "https://github.com/thewhodidthis/bipolar/issues"
   },
   "scripts": {
+    "pretest": "eslint test.js",
     "test": "node test",
-    "lint": "eslint index.es test/*.js",
-    "start": "rollup -c && uglifyjs dist/bipolar.js -cmo dist/bipolar.min.js"
+    "prestart": "eslint index.es",
+    "start": "rollup -f cjs index.es | buble > index.js"
+  },
+  "eslintConfig": {
+    "extends": "@thewhodidthis"
   },
   "engines": {
     "node": ">=4.2.4",
@@ -28,16 +27,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "latest",
-    "babel-plugin-external-helpers": "latest",
-    "babel-preset-latest": "latest",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "latest",
-    "eslint-plugin-import": "latest",
+    "@thewhodidthis/eslint-config": "latest",
+    "buble": "latest",
     "rollup": "latest",
-    "rollup-plugin-babel": "latest",
-    "tape": "latest",
-    "uglify-js": "latest"
+    "tape": "latest"
   },
   "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
   "license": "Unlicense"
