package: up engines, fix main field, buble not cjs version, add example build script + keywords

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bipolar",
   "version": "0.0.4",
   "description": "Helps detect change",
-  "main": "index.js",
+  "main": "index",
   "module": "index.mjs",
   "homepage": "https://github.com/thewhodidthis/bipolar#readme",
   "repository": {
@@ -16,23 +16,29 @@
     "pretest": "eslint test.js",
     "test": "node test",
     "prestart": "eslint index.mjs",
-    "start": "rollup -f cjs index.mjs | buble > index.js"
+    "start": "rollup -f cjs index.mjs > index.js",
+    "preexample": "eslint example.js",
+    "example": "rollup -c node:x -f iife example.js | kpow"
   },
   "eslintConfig": {
     "extends": "@thewhodidthis"
   },
   "engines": {
-    "node": ">=4.2.4",
-    "npm": ">=3.5.3"
+    "node": ">=6.4.0",
+    "npm": ">=3.10.3"
   },
   "dependencies": {},
   "devDependencies": {
     "@thewhodidthis/eslint-config": "latest",
-    "buble": "latest",
     "eslint": "latest",
+    "kpow": "latest",
     "rollup": "latest",
-    "tape": "latest"
+    "rollup-config-x": "latest",
+    "tapeless": "latest"
   },
+  "keywords": [
+    "bipolar"
+  ],
   "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
   "license": "Unlicense"
 }
