--- a/package.json
+++ b/package.json
@@ -2,40 +2,41 @@
   "name": "bipolar",
   "version": "0.0.8",
   "description": "Helps detect change",
-  "main": "index",
-  "module": "index.mjs",
+  "keywords": [
+    "bipolar"
+  ],
   "homepage": "https://github.com/thewhodidthis/bipolar#readme",
+  "bugs": {
+    "url": "https://github.com/thewhodidthis/bipolar/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thewhodidthis/bipolar.git"
   },
-  "bugs": {
-    "url": "https://github.com/thewhodidthis/bipolar/issues"
-  },
+  "license": "ISC",
+  "author": "Sotiri Bakagiannis <sotirios.bakagiannis@gmail.com> (http://thewhodidthis.com)",
+  "main": "index",
+  "module": "index.mjs",
   "scripts": {
-    "pretest": "eslint test.js",
-    "test": "node test",
-    "prestart": "eslint index.mjs",
-    "start": "rollup -f cjs index.mjs > index.js",
     "preexample": "eslint example.js",
-    "example": "node example"
+    "example": "node example",
+    "prestart": "eslint index.mjs",
+    "start": "rollup -f cjs -o index.js index.mjs",
+    "pretest": "eslint test.js",
+    "test": "node test"
   },
   "eslintConfig": {
     "extends": "@thewhodidthis"
   },
+  "dependencies": {},
+  "devDependencies": {
+    "@thewhodidthis/eslint-config": "^0.0.17",
+    "eslint": "^6.8.0",
+    "rollup": "^1.31.1",
+    "tapeless": "^0.0.9"
+  },
   "engines": {
     "node": ">=6.11.0",
     "npm": ">=3.10.10"
-  },
-  "devDependencies": {
-    "@thewhodidthis/eslint-config": "^0.0.11",
-    "eslint": "^6.8.0",
-    "rollup": "^1.31.0",
-    "tapeless": "^0.0.7"
-  },
-  "keywords": [
-    "bipolar"
-  ],
-  "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
-  "license": "Unlicense"
+  }
 }
