package: use type module, up engines, drop eslint, rollup

--- a/package.json
+++ b/package.json
@@ -15,28 +15,18 @@
   },
   "license": "ISC",
   "author": "Sotiri Bakagiannis <sotirios.bakagiannis@gmail.com> (http://thewhodidthis.com)",
-  "main": "index",
-  "module": "index.mjs",
+  "type": "module",
+  "exports": "./main.js",
+  "main": "./main.js",
   "scripts": {
-    "preexample": "eslint example.js",
-    "example": "node example",
-    "prestart": "eslint index.mjs",
-    "start": "rollup -f cjs -o index.js index.mjs",
-    "pretest": "eslint test.js",
-    "test": "node test"
+    "start": "node example.js",
+    "test": "node test.js"
   },
-  "eslintConfig": {
-    "extends": "@thewhodidthis"
-  },
-  "dependencies": {},
   "devDependencies": {
-    "@thewhodidthis/eslint-config": "^0.1.7",
-    "eslint": "^7.3.1",
-    "rollup": "^2.18.0",
-    "tapeless": "^1.0.3"
+    "tapeless": "^2.0.1"
   },
   "engines": {
-    "node": ">=6.11.0",
-    "npm": ">=3.10.10"
+    "node": ">=14.17.0",
+    "npm": ">=6.14.13"
   }
 }
